--- a/Project/Frontend/quickpharma/src/Customer/footer.css
+++ b/Project/Frontend/quickpharma/src/Customer/footer.css
@@ -17,6 +17,14 @@
     margin-top:10px;
     border:1px solid white;
 }
+
+.mainDiv{
+    color: red;
+    background-color: aliceblue;
+    border: 1px solid blue;
+    margin: 25px;
+}
+
 #footer .list-unstyled li a {
     font-size: 15px;
 }
@@ -43,3 +51,5 @@
     color:red;
     transition: 0.4s ease;
 }
+
+
